# MCP-TOOLS

./: .gitignore  .pypirc.example  GitHub上传指南.md  README.md  README_LOGO.md  cursor-mcp-config-example.json  logo-ascii.txt  logo-simple.txt  logo.txt  pyproject.toml  requirements.txt  setup.py  上传说明.md  上传配置说明.md  代码详细解释.md  使用指南.md  发布指南.md  完整文档.md  手动上传指南.md  检查Git状态.md
configs/: cursor-mcp-config-example.json
docs/: Nacos使用指南.md  使用指南.md
examples/: log_analyzer_example.py  nacos_example.py
scripts/: upload_to_pypi.py
src/mcp_services/log_analyzer/: tool.py
src/mcp_services/log_analyzer/resources/: logback-spring.xml
src/mcp_services/nacos/: __init__.py  tool.py
src/resource/: logback-spring.xml
src/tools/: __init__.py  log_analyzer_example.py  log_analyzer_tool.py
