[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-logback-analyzer"
version = "1.0.2"
description = "一个基于 FastMCP 的 Model Context Protocol (MCP) 工具，用于分析 Java Spring Boot 应用的日志文件，自动检测代码缺陷并生成修复建议。"
readme = "docs/使用指南.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mengbi", email = "mengbi1014@gmail.com"}
]
keywords = ["mcp", "log", "analyzer", "logback", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/mengbi-super/MCP-TOOLS"
Documentation = "https://github.com/mengbi-super/MCP-TOOLS/blob/main/docs/使用指南.md"
Repository = "https://github.com/mengbi-super/MCP-TOOLS"
Issues = "https://github.com/mengbi-super/MCP-TOOLS/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcp_services.log_analyzer" = ["resources/*.xml"]
